--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_register.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_register.xml
@@ -16,73 +16,103 @@
 
     <EditText
         android:id="@+id/nameEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Nombre"
-        android:inputType="textPersonName"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/lightGray"
-        android:textColorHint="@color/lightGray"
+        android:ems="10"
+        android:inputType="textPersonName"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="48dp" />
+        android:textColorHint="@color/lightGray"
+        app:layout_constraintEnd_toStartOf="@+id/imageFrame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
         android:id="@+id/surnameEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/lightGray"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/lightGray"
+        app:layout_constraintEnd_toStartOf="@+id/imageFrame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
+
+    <FrameLayout
+        android:id="@+id/imageFrame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Apellidos"
-        android:backgroundTint="@color/lightGray"
-        android:textColorHint="@color/lightGray"
-        android:textColor="@android:color/black"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
-        tools:layout_editor_absoluteX="25dp" />
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/rounded_orange_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="16dp"
+            android:cropToPadding="false"
+            android:scaleType="centerCrop"
+            app:srcCompat="@android:drawable/ic_menu_report_image" />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="338dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Email"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/lightGray"
-        android:textColorHint="@color/lightGray"
-        android:textColor="@android:color/black"
+        android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintTop_toBottomOf="@+id/surnameEditText"
-        tools:layout_editor_absoluteX="25dp" />
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/lightGray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/surnameEditText" />
 
     <EditText
         android:id="@+id/pwdEditText"
-        android:layout_width="338dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Contraseña (min. 6 caracteres)"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/lightGray"
-        android:textColorHint="@color/lightGray"
-        android:textColor="@android:color/black"
+        android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
-        tools:layout_editor_absoluteX="25dp" />
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/lightGray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <CheckBox
         android:id="@+id/isTrainerCheckBox"
         style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-        android:layout_width="337dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Indica si tambien eres entrenador"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/lightGray"
-        android:textColorHint="@color/lightGray"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/pwdEditText"
-        tools:layout_editor_absoluteX="25dp" />
+        android:textColorHint="@color/lightGray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pwdEditText" />
 
     <include
         android:id="@+id/registerButton"
@@ -92,7 +122,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="REGISTRARSE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/isTrainerCheckBox" />
