--- a/ThePersonalTrainerClub/app/src/main/res/values/styles.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
 </resources>
