SCH: - Remove unnecessary parameters in Login constructors - Update API URL - Include auth jwt in shared preferences - Use jwt in webservice header

--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_login.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_login.xml
@@ -42,12 +42,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/lightGray"
                 android:ems="10"
                 android:hint="user@domain.com"
-                android:textColorHint="@color/lightGray"
-                android:textColor="@android:color/black"
                 android:inputType="textEmailAddress"
-                android:backgroundTint="@color/lightGray"
+                android:text="test08@gmail.com"
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/lightGray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,12 +61,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/lightGray"
                 android:ems="10"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:backgroundTint="@color/lightGray"
-                android:textColorHint="@color/lightGray"
+                android:text="1234"
                 android:textColor="@android:color/black"
+                android:textColorHint="@color/lightGray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
