--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_dashboard.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_dashboard.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.dashboard.DashboardActivity">
-
-</android.support.constraint.ConstraintLayout>-->
-
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,6 +21,9 @@
             android:id="@+id/tabs_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/customOrange"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabTextColor="@android:color/darker_gray"
             app:tabMode="fixed" />
 
         <android.support.v4.view.ViewPager
@@ -40,5 +33,4 @@
             app:layout_constraintTop_toBottomOf="@+id/tabs_main"/>
 
     </android.support.design.widget.AppBarLayout>
-
 </android.support.constraint.ConstraintLayout>
