--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
@@ -7,142 +7,225 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
         android:background="@color/darkGray"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="8dp">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_weight="5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/med_dp"
+            android:layout_marginEnd="@dimen/med_dp"
+            android:layout_marginStart="@dimen/med_dp"
             android:background="@color/darkGray"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="@dimen/med_dp">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_height="100dp"
+                android:layout_weight="4"
+                android:background="@color/darkGray"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/med_dp"
+                    android:text="@string/fragment_class_sport"
+                    android:textAlignment="center"
+                    android:textColor="@color/text"
+                    android:textSize="17sp"
+                    tools:text="Balonmano" />
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/med_dp"
+                    app:srcCompat="@drawable/ic_icon" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:text="@string/fragment_class_sport"
-                android:textAlignment="center"
-                android:textColor="@color/text"
-                android:textSize="17sp"
-                tools:text="Balonmano" />
+                android:layout_weight="1"
+                android:background="@color/darkGray"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                app:srcCompat="@drawable/ic_icon" />
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/ic_icon" />
 
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/ic_icon" />
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/ic_icon" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/ic_icon" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="2dp"
+                    app:srcCompat="@drawable/ic_icon" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:background="@color/darkGray"
+                android:orientation="vertical">
+
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="?android:attr/listDivider" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/fragment_class_name_location"
+                    android:textColor="@color/text"
+                    tools:text='Gimnasio "El gran atardecer"' />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/fragment_class_date"
+                    android:textColor="@color/text"
+                    tools:text="12 Septiembre 2018" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/fragment_class_time"
+                    android:textColor="@color/text"
+                    tools:text="De 16:00 a 17:00" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/fragment_class_number_user"
+                    android:textColor="@color/text"
+                    tools:text="Alumnos ( 12/20 )" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/fragment_class_price"
+                    android:textColor="@color/text"
+                    tools:text="10€ / clase" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/darkGray"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                app:srcCompat="@drawable/ic_icon" />
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                app:srcCompat="@drawable/ic_icon" />
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                app:srcCompat="@drawable/ic_icon" />
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                app:srcCompat="@drawable/ic_icon" />
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                app:srcCompat="@drawable/ic_icon" />
-        </LinearLayout>
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/colorPrimaryDark" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:background="@color/darkGray"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/med_dp"
+            android:layout_marginLeft="@dimen/med_dp"
+            android:layout_marginRight="@dimen/med_dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/fragment_class_name_location"
-                android:textColor="@color/text"
-                tools:text='Gimnasio "El gran atardecer"' />
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/fragment_class_date"
-                android:textColor="@color/text"
-                tools:text="12 Septiembre 2018" />
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="4dp"
+                    app:srcCompat="@drawable/ic_icon" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/fragment_class_time"
-                android:textColor="@color/text"
-                tools:text="De 16:00 a 17:00" />
+                <LinearLayout
+                    android:layout_width="116dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    android:padding="4dp">
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/fragment_class_number_user"
-                android:textColor="@color/text"
-                tools:text="Alumnos ( 12/20 )" />
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_class_name_instructor"
+                        android:textColor="@color/text" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/fragment_class_price"
-                android:textColor="@color/text"
-                tools:text="10€ / clase" />
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_class_lastname_instructor"
+                        android:textColor="@color/text" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/button2"
+                    style="?attr/buttonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/fragment_button_vote"
+                    android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/fragment_button_cancel" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
