--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_strip_cell.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_strip_cell.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     >
 
-    <ImageView
-        android:id="@+id/sport_image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_add_activity"
-        android:layout_gravity="bottom|right"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="@drawable/rounded_gray_background">
+
+        <ImageView
+            android:id="@+id/sport_image"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_add_activity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/sport_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="16sp"
         tools:text="Football"
-        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:paddingTop="4dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
