SCH: - TASK #72 : Android: View - TASK #74 : Android: Creación del presenter - TASK #75 : Android: Navigator - TASK #125: Android: Crear Subvistas (actividaes, ubicaciones y clases abiertas)

--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_strip_grid.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_strip_grid.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridView android:id="@+id/gridview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:columnWidth="100dp"
     android:numColumns="auto_fit"
