--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_class_row.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_class_row.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:background="@color/darkGray"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent">
@@ -33,7 +34,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/sportTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -45,7 +46,7 @@
                     tools:text="Balonmano" />
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/sportImageView"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -114,7 +115,7 @@
                     android:background="?android:attr/listDivider" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/locationTextView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_name_location"
@@ -122,7 +123,7 @@
                     tools:text='Gimnasio "El gran atardecer"' />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/dateTextView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_date"
@@ -130,7 +131,7 @@
                     tools:text="12 Septiembre 2018" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/timeTextView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_time"
@@ -138,7 +139,7 @@
                     tools:text="De 16:00 a 17:00" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/cuotaTextView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_number_user"
@@ -146,7 +147,7 @@
                     tools:text="Alumnos ( 12/20 )" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/priceTextView"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_price"
@@ -195,22 +196,22 @@
                     android:padding="4dp">
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/userTypeTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/fragment_class_name_instructor"
+                        android:text="Trainer"
                         android:textColor="@color/text" />
 
                     <TextView
-                        android:id="@+id/textView9"
+                        android:id="@+id/trainerNameTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/fragment_class_lastname_instructor"
+                        android:text="Name"
                         android:textColor="@color/text" />
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/voteButton"
                     style="?attr/buttonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -219,7 +220,7 @@
                     android:visibility="visible" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/cancelButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
